--- a/pada/pada-compiler/pom.xml
+++ b/pada/pada-compiler/pom.xml
@@ -57,5 +57,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 </project>
