--- a/ide/ide-idea/META-INF/plugin.xml
+++ b/ide/ide-idea/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <idea-plugin version="2">
-    <id>pada.ide.idea</id>
+    <id>pada.lang.idea</id>
     <name>Pada</name>
     <version>0.1</version>
     <vendor email="ol.loginov@gmail.com">Oleg Loginov</vendor>
@@ -8,22 +8,17 @@
       Adds support for developing Pada source code.
       ]]></description>
 
-    <idea-version since-build="107.105"/>
-
     <!-- please see http://confluence.jetbrains.net/display/IDEADEV/Plugin+Compatibility+with+IntelliJ+Platform+Products
          on how to target different products -->
     <!-- uncomment to enable plugin in all products
     <depends>com.intellij.modules.lang</depends>
     -->
 
-    <application-components>
-    </application-components>
+    <application-components/>
 
-    <project-components>
-    </project-components>
+    <project-components/>
 
-    <actions>
-    </actions>
+    <actions/>
 
     <extensions defaultExtensionNs="com.intellij">
     </extensions>
